03-Project-manifests/grafana-ingress/IngressRoute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: grafana
  namespace: traefik
  annotations:
    argocd.argoproj.io/sync-wave: "1"
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`grafana.klaus-devops-journey.com`)
      kind: Rule
      services:
        - name: kube-prometheus-stack   # match Helm release name
          port: 80
  tls:
    secretName: grafana-tls
